[package]
name = "covid_tracker"
description = "Simple little CLI tool to get the current Covid information from https://www.worldometer.info"
version = "0.1.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/DutchRican/covid_tracker"
repository = "https://github.com/DutchRican/covid_tracker"
license = "MIT"
keywords = ["covid", "stats", "cli"]
categories = ["command-line-utilities"]
exclude = ["/__image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
scraper = "0.13.0"
cli-table = "0.4.7"
clap = { version = "4.0.15", features = ["derive"] }
thousands = "0.2.0"
chrono = "0.4.22"

[profile.release]
opt-level = 'z'
lto = true
codegen-units=1
panic = 'abort'
strip = true
