[package]
name = "covid_tracker"
description = "Simple little CLI tool to get the current Covid information from https://www.worldometer.info"
version = "0.1.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/DutchRican/covid_tracker"
repository = "https://github.com/DutchRican/covid_tracker"
license = "MIT"
keywords = ["covid", "stats", "cli"]
categories = ["command-line-utilities"]
exclude = ["/__image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
scraper = "0.17.1"
cli-table = "0.4.7"
clap = { version = "4.3.19", features = ["derive"] }
thousands = "0.2.0"
chrono = "0.4.26"

[profile.release]
opt-level = 'z'
lto = true
codegen-units=1
panic = 'abort'
strip = true
